# brain-inspired-gpt

./: .gitignore  DATA_GUIDE.md  ENGLISH_TRAINING_GUIDE.md  LEARNING_RATE_FIX.md  README.md  README_KR.md  TRAINING_OPTIMIZATION.md  benchmark_v1_vs_v2.py  prepare_all_datasets.py  pyproject.toml  quick_prepare_datasets.py  test_async_loading.py  test_multilingual.py  test_training_quick.py  test_v2_features.py  validate_brain_gpt.py
brain_gpt/: .gitignore  quickstart.py  quickstart_brain_gpt.py  quickstart_fixed.py  requirements_brain.txt
brain_gpt/benchmarks/: benchmark_brain_gpt.py  test_brain_gpt.py
brain_gpt/configs/: train_brain_gpt.py
brain_gpt/core/: __init__.py  model_brain.py  model_brain_config.py  model_brain_config_v2.py  model_brain_v2.py  multilingual_tokenizer.py  sparse_modules.py
brain_gpt/docs/: memory_optimization.md
brain_gpt/inference/: demo_brain_gpt.py  inference_brain_gpt.py
brain_gpt/tests/: comprehensive_test.py  run_all_tests.py  test_all_functions.py  test_data_loading.py  test_training.py
brain_gpt/training/: create_sample_data.py  download_korean_datasets.py  train_korean.py  (+8 more)
data/: test.jsonl  train.jsonl  val.jsonl
docs/: README.md  cortex_stability_solutions.md  training_tips.md
scripts/: README.md  benchmark.py  cleanup.sh  download_data.py  generate.py  prepare_data.py  quick_download.py  quick_start.py  quick_start_unified.py  train.py  train_cortexgpt.py  train_cortexgpt_consumer_gpu.py  train_fast_3090.py  train_high_lr.py  train_neuroscience_3090.py  train_with_async.py
tests/: demo_tokenizer.py  test_overfit.py
(+43 files in other folders)
