[project]
name = "brain-gpt"
version = "1.0.0"
description = "Brain-Inspired Efficient GPT with 10x faster inference and Korean language support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "sentencepiece>=0.1.99",
    "konlpy>=0.6.0",
    "mecab-python3>=1.0.5",
    "tiktoken>=0.5.1",
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
    "triton>=2.1.0",
    "ninja",
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "py3nvml>=0.2.7",
    "psutil>=5.9.0",
]
