[project]
name = "cortexgpt"
version = "0.1.0"
description = "Real-time Learning Language Model Inspired by Human Brain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.0",
    "tqdm>=4.65.0",
    "regex>=2023.0.0",
    "FlagEmbedding>=1.2.0",
    "gputil>=1.4.0",
    "wandb>=0.21.0",
    "matplotlib>=3.10.3",
]

[project.optional-dependencies]
monitoring = [
    "wandb>=0.15.0",
    "gputil>=1.4.0",
    "psutil>=5.9.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
]

korean = [
    "konlpy>=0.6.0",
    "mecab-python3>=1.0.5",
]
